--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -5,7 +5,6 @@
     </head>
     <body>
         <h1>Video</h1>
-        <video width="320" height="240" controls>
-            <source src="GitHub/workvideo.mp4" type="video/mp4">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vxcJ-pVff4o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </body>
 </html>
