--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -5,6 +5,8 @@
     </head>
     <body>
         <h1>Video</h1>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/vxcJ-pVff4o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/vxcJ-pVff4o" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </video>
     </body>
 </html>
