--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -5,10 +5,31 @@
     </head>
     <body>
         <h1>Video</h1>
+            <!-- This is an image -->
+            <img
+            src="https://static01.nyt.com/images/2016/09/28/us/17xp-pepethefrog_web1/28xp-pepefrog-articleLarge.jpg?quality=75&auto=webp&disable=upscale"
+            width="250px" height="250px">
+
+            <!-- This is a youtube video -->
             <iframe width="560" height="315" src="https://www.youtube.com/embed/vxcJ-pVff4o" 
             frameborder="0" 
             allow="accelerometer autoplay clipboard-write encrypted-media gyroscope picture-in-picture" 
             allowfullscreen>
             </iframe>
+
+            <!-- This is a google map -->
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21824.415923333552!2d-121.7691294153963!3d46.86234925878696!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5490d193f70860fb%3A0x5b5e4fe17ad6b707!2sMount%20Rainier!5e0!3m2!1sen!2sus!4v1602205588544!5m2!1sen!2sus" 
+            width="600" 
+            height="450" 
+            frameborder="0" 
+            style="border:0;" 
+            allowfullscreen="" 
+            aria-hidden="false" 
+            tabindex="0">
+            </iframe>
+
+            <!-- this is a website (CANVAS) -->
+            <iframe src="canvas.uw.edu" width="100%" height="560px"></iframe>
+
     </body>
 </html>
