--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -8,7 +8,7 @@
             <!-- This is an image -->
             <img
             src="https://static01.nyt.com/images/2016/09/28/us/17xp-pepethefrog_web1/28xp-pepefrog-articleLarge.jpg?quality=75&auto=webp&disable=upscale"
-            width="250px" height="250px">
+            width="250" height="250">
 
             <!-- This is a youtube video -->
             <iframe width="560" height="315" src="https://www.youtube.com/embed/vxcJ-pVff4o" 
@@ -29,7 +29,7 @@
             </iframe>
 
             <!-- this is a website (CANVAS) -->
-            <iframe src="canvas.uw.edu" width="100%" height="560px"></iframe>
+            <iframe src="canvas.uw.edu" width="100%" height="560"></iframe>
 
     </body>
 </html>
