--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -29,7 +29,7 @@
             </iframe>
 
             <!-- this is a website (CANVAS) -->
-            <iframe src="canvas.uw.edu" width="100%" height="560px"></iframe>
+            <iframe src="http://washington.edu" width="100%" height="560px"></iframe>
 
     </body>
 </html>
