--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -11,7 +11,7 @@
             width="250px" height="250px">
 
             <!-- This is a youtube video -->
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/vxcJ-pVff4o" 
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/vxcJ-pVff4o?start=180" 
             frameborder="0" 
             allow="accelerometer autoplay clipboard-write encrypted-media gyroscope picture-in-picture" 
             allowfullscreen>
@@ -28,8 +28,20 @@
             tabindex="0">
             </iframe>
 
-            <!-- this is a website (CANVAS) -->
-            <iframe src="http://washington.edu" width="100%" height="560px"></iframe>
+            <!-- audio and video tags -->
+            <audio controls>
+                <source src="workvideo.mp3" type="audio/mpeg">
+            </audio>
+
+            <video width="320px" height="240px" controls>
+                <source src="workvideo.mp4" type="video/mp4">
+            </video>
+
+            <!-- RSS feed -->
+            
+
+            <!-- Testing object tag for HTML page -->
+            <object data="index.html" width="500px" height="200px"></object>
 
     </body>
 </html>
