--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -30,15 +30,15 @@
 
             <!-- audio and video tags -->
             <audio controls>
-                <source src="workvideo.mp3" type="audio/mpeg">
+                <source src="E:\Documents\GitHub\workvideo.mp3" type="audio/mpeg">
             </audio>
 
             <video width="320px" height="240px" controls>
-                <source src="workvideo.mp4" type="video/mp4">
+                <source src="E:\Documents\GitHub\workvideo.mp4" type="video/mp4">
             </video>
 
             <!-- RSS feed -->
-            
+
 
             <!-- Testing object tag for HTML page -->
             <object data="index.html" width="500px" height="200px"></object>
