--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -38,7 +38,7 @@
             </video>
 
             <!-- RSS feed -->
-            <?xml version="1.0" encoding="UTF-8" ?>
+            <!-- ?xml version="1.0" encoding="UTF-8" ? -->
             <rss xmlns:media="http://search.yahoo.com/mrss/" version="2.0">
                 <channel>
                 <generator>NFE/5.0</generator>
