--- a/someCss.html
+++ b/someCss.html
@@ -54,7 +54,9 @@
                     Given that this floating is correct we should see the impact of the external css and the usage of floats for the master requirement.</p>
             
             </div>
-
+        <div>
+            <p id="rcorners">Border this text up</p>
+        </div>
     </body>
 
 </html>
